--- a/Innovzen/res/layout-land/reusable_lefter.xml
+++ b/Innovzen/res/layout-land/reusable_lefter.xml
@@ -6,7 +6,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:id="@+id/left_toolbar" >
 
 <com.innovzen.ui.MeasureView
         android:id="@+id/left_mea_vertical_1"
@@ -40,7 +41,7 @@
 
      <ImageView
         android:id="@+id/left_top"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_1"
         android:layout_alignTop="@id/left_mea_vertical_1"
@@ -50,7 +51,7 @@
 
     <ImageView
         android:id="@+id/left_mid"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_2"
         android:layout_alignTop="@id/left_mea_vertical_2"
@@ -60,7 +61,7 @@
 
     <ImageView
         android:id="@+id/left_bottom"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_3"
         android:layout_alignTop="@id/left_mea_vertical_3"
