--- a/Innovzen/res/layout-land/fragment_animation_new.xml
+++ b/Innovzen/res/layout-land/fragment_animation_new.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+  <!-- <RelativeLayout
+        android:id="@+id/animation_dummy_white_view_for_fullscreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="gone" >
+    </RelativeLayout> -->  
+    
     <com.innovzen.ui.MeasureView
         android:id="@+id/main_mea_vertical_1"
         android:layout_width="wrap_content"
@@ -49,7 +57,7 @@
         android:id="@+id/main_mea_horizontal_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@id/main_mea_horizontal_1"
+        android:layout_toRightOf="@id/main_mea_horizontal_1"
         android:layout_alignParentTop="true"
         layout:orientation="false"
         layout:rate_down="5"
@@ -59,7 +67,7 @@
         android:id="@+id/main_mea_horizontal_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@id/main_mea_horizontal_2"
+        android:layout_toRightOf="@id/main_mea_horizontal_2"
         android:layout_alignParentTop="true"
         layout:orientation="false"
         layout:rate_down="5"
@@ -68,10 +76,12 @@
     <!-- 左边栏 -->
 
     <include
+        layout="@layout/reusable_lefter"
         android:id="@+id/main_left"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        layout="@layout/reusable_lefter" />
+        android:layout_alignParentTop="true" 
+        android:layout_alignLeft="@id/main_mea_horizontal_1"
+        android:layout_alignRight="@id/main_mea_horizontal_1"/>
 
     <!-- 中上框架 -->
 
@@ -117,57 +127,15 @@
     <!-- ANIMATION PARENT CONTAINER -->
     <!-- 中中动画显示 -->
 
-    <RelativeLayout
-        android:id="@+id/animation_animation_parent_container"
+    <include
+        layout="@layout/animation_core"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/main_mea_vertical_2"
         android:layout_alignLeft="@id/main_mea_horizontal_2"
         android:layout_alignRight="@id/main_mea_horizontal_2"
-        android:layout_alignTop="@id/main_mea_vertical_2" >
+        android:layout_alignTop="@id/main_mea_vertical_2" />
 
-        <!-- ANIMATION CONTAINER -->
-
-        <RelativeLayout
-            android:id="@+id/animation_animation_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white" >
-        </RelativeLayout>
-
-        <!-- ANIMATION TYPE -->
-
-        <TextView
-            android:id="@+id/animation_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/shape_animation_type_bckgnd"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="true"
-            android:text="Exercice PERFORMANCE"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/animation_type" />
-
-        <!-- FULL SCREEN BTN -->
-
-        <RelativeLayout
-            android:id="@+id/animation_fullscreen_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp" >
-
-            <ImageView
-                android:id="@+id/animation_fullscreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/selector_icon_fullscreen_in" />
-        </RelativeLayout>
-    </RelativeLayout>
 
     <!-- 中下框架 -->
 
@@ -228,7 +196,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="#FF00FF00"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -237,7 +205,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="#FF00FF00"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -246,7 +214,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="#FF00FF00"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -255,7 +223,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="#FF00FF00"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -264,7 +232,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="#FF00FF00"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -273,7 +241,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="#FF00FF00"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
     </LinearLayout>
