--- a/Innovzen/res/layout-land/fragment_animation_new.xml
+++ b/Innovzen/res/layout-land/fragment_animation_new.xml
@@ -3,7 +3,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:background="#000000"
+    >
 
   <!-- <RelativeLayout
         android:id="@+id/animation_dummy_white_view_for_fullscreen"
@@ -74,14 +76,27 @@
         layout:rate_up="6" />
 
     <!-- 左边栏 -->
+    <!-- chy -->
+  <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/main_mea_vertical_3"
+        android:layout_alignLeft="@id/main_mea_horizontal_1"
+        android:layout_alignRight="@id/main_mea_horizontal_1"
+        android:layout_alignTop="@id/main_mea_vertical_1"
+        android:background="#000000"
+        android:padding="@dimen/grid_half_gap" >
 
-    <include
+        <include layout="@layout/reusable_lefter" />
+    </LinearLayout>
+<!-- chy -->
+<!--     <include
         layout="@layout/reusable_lefter"
         android:id="@+id/main_left"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true" 
         android:layout_alignLeft="@id/main_mea_horizontal_1"
-        android:layout_alignRight="@id/main_mea_horizontal_1"/>
+        android:layout_alignRight="@id/main_mea_horizontal_1"/> -->
 
     <!-- 中上框架 -->
 
@@ -93,6 +108,7 @@
         android:layout_alignLeft="@id/main_mea_horizontal_2"
         android:layout_alignRight="@id/main_mea_horizontal_2"
         android:layout_alignTop="@id/main_mea_vertical_1"
+        
         android:orientation="horizontal"
         android:weightSum="3" >
 
@@ -101,7 +117,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="@drawable/selector_btn_home"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -110,7 +126,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="@drawable/selector_btn_play"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -119,7 +135,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="@drawable/selector_btn_pause"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
     </LinearLayout>
@@ -155,7 +171,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="@drawable/selector_btn_settings"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -164,7 +180,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="@drawable/selector_btn_help"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -173,7 +189,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF00"
+            android:background="@drawable/selector_btn_gravity"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
     </LinearLayout>
@@ -196,7 +212,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FF00FF00"
+            android:background="@drawable/selector_btn_breath_more"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -205,7 +221,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FF00FF00"
+            android:background="@drawable/selector_btn_breath_less"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -214,7 +230,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FF00FF00"
+            android:background="@drawable/selector_btn_backup"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -223,7 +239,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FF00FF00"
+            android:background="@drawable/selector_btn_backdown"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -232,7 +248,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FF00FF00"
+            android:background="@drawable/selector_btn_footup"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
@@ -241,7 +257,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:background="#FF00FF00"
+            android:background="@drawable/selector_btn_footdown"
             android:padding="@dimen/grid_half_gap" >
         </ImageView>
     </LinearLayout>
