--- a/Innovzen/res/layout-land/reusable_lefter.xml
+++ b/Innovzen/res/layout-land/reusable_lefter.xml
@@ -56,7 +56,7 @@
         android:layout_alignBottom="@id/left_mea_vertical_2"
         android:layout_alignTop="@id/left_mea_vertical_2"
         android:layout_alignParentLeft="true"
-        android:background="#FFFF00FF"
+        android:background="@drawable/banner_time"
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
@@ -66,6 +66,6 @@
         android:layout_alignBottom="@id/left_mea_vertical_3"
         android:layout_alignTop="@id/left_mea_vertical_3"
         android:layout_alignParentLeft="true"
-        android:background="#FF00FFFF"
+        android:background="@drawable/selector_btn_help"
         android:padding="@dimen/grid_half_gap" />
 </RelativeLayout>
