--- a/Innovzen/res/layout-land/fragment_language.xml
+++ b/Innovzen/res/layout-land/fragment_language.xml
@@ -4,8 +4,7 @@
     xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#000000"
-     >
+    android:background="@color/main_backgroud" >
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/left_vertical_1"
@@ -31,7 +30,6 @@
         android:id="@+id/up_mea_Horizontal_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/left_vertical_1"
         layout:orientation="false"
@@ -58,22 +56,18 @@
         layout:rate_down="28"
         layout:rate_up="12" />
 
-    <LinearLayout
+    <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_vertical_2"
         android:layout_alignLeft="@id/up_mea_Horizontal_1"
         android:layout_alignRight="@id/up_mea_Horizontal_1"
         android:layout_alignTop="@id/left_vertical_1"
-        android:background="#000000"
-        android:padding="@dimen/grid_half_gap" >
+        layout="@layout/reusable_lefter"
+        android:padding="@dimen/grid_half_gap" />
 
-        <include layout="@layout/reusable_lefter" />
-    </LinearLayout>
-
-
-        <ImageView
-          android:id="@+id/menu_balance"
+    <ImageView
+        android:id="@+id/menu_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_vertical_1"
@@ -81,10 +75,10 @@
         android:layout_alignRight="@id/up_mea_Horizontal_2"
         android:layout_alignTop="@id/left_vertical_1"
         android:background="@drawable/selector_icon_american"
-        android:padding="@dimen/grid_half_gap"/>
+        android:padding="@dimen/grid_half_gap" />
 
-        <ImageView
-            android:id="@+id/menu_performance"
+    <ImageView
+        android:id="@+id/menu_performance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_vertical_2"
@@ -94,7 +88,7 @@
         android:background="@drawable/selector_icon_german"
         android:padding="@dimen/grid_half_gap" />
 
-        <ImageView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_vertical_1"
@@ -102,9 +96,9 @@
         android:layout_alignRight="@id/up_mea_Horizontal_3"
         android:layout_alignTop="@id/left_vertical_1"
         android:background="@drawable/selector_icon_french"
-        android:padding="@dimen/grid_half_gap"/>
+        android:padding="@dimen/grid_half_gap" />
 
-       <ImageView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_vertical_2"
