--- a/Innovzen/res/layout-land/reusable_lefter.xml
+++ b/Innovzen/res/layout-land/reusable_lefter.xml
@@ -79,32 +79,49 @@
         android:background="@drawable/btn_volum_open"
         android:orientation="vertical"
         android:visibility="invisible"
-        android:weightSum="12" >
+      >
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3" 
-            android:src="@drawable/icon_volum"
-            />
-
-        <ProgressBar
-            android:layout_weight="6"
-            android:id="@+id/myView_ProgressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:progress="57"
+        
+            android:src="@drawable/icon_volum" />
+
+    
+      <!--   <ProgressBar
+            android:layout_weight="8"
+            android:id="@+id/myView_ProgressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:progress="30"
+            android:max="100"
+            
+            android:progressDrawable="@drawable/volume_level_up"
             android:background="@drawable/volume_level_down"
              >
-        </ProgressBar>
+        </ProgressBar> -->
+
+
+         <com.innovzen.fragments.VerticalSeekBar
+            android:layout_width="10dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+    
+            android:minWidth="10dp"
+            android:maxWidth="10dp"
+            android:background="@drawable/volume_level_down"
+            android:progressDrawable="@drawable/volume_level_up"
+            android:thumb="@drawable/volume_cursor" /> 
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3" 
-              android:src="@drawable/icon_volum_less"
-            />
+            android:layout_gravity="center_horizontal"
+        
+            android:src="@drawable/icon_volum_less" />
     </LinearLayout>
 
 </RelativeLayout>
