--- a/Innovzen/res/layout-land/fragment_music.xml
+++ b/Innovzen/res/layout-land/fragment_music.xml
@@ -13,11 +13,12 @@
         android:text="Aquatic SunBean"
         android:textColor="#36A7B7"
         android:textSize="24sp" />
-<View
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#000000" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="88dp"
@@ -25,11 +26,12 @@
         android:text="Bondi Breath"
         android:textColor="#36A7B7"
         android:textSize="24sp" />
-<View
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#000000" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="88dp"
@@ -37,11 +39,12 @@
         android:text="Angelic Organ"
         android:textColor="#36A7B7"
         android:textSize="24sp" />
-<View
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#000000" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="88dp"
@@ -49,11 +52,12 @@
         android:text="Ithaca Vox"
         android:textColor="#36A7B7"
         android:textSize="24sp" />
-<View
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#000000" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="88dp"
