--- a/Innovzen/res/layout-land/fragment_history2.xml
+++ b/Innovzen/res/layout-land/fragment_history2.xml
@@ -1,22 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.innovzen.o2chair"
+    xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background" >
+    android:background="@color/main_backgroud" >
 
-    <!-- HEADER -->
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/left_mea_vertical_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        layout:orientation="true"
+        layout:rate_down="1"
+        layout:rate_up="1" />
 
-    <include layout="@layout/reusable_header" />
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/up_mea_Horizontal_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/left_mea_vertical_1"
+        layout:orientation="false"
+        layout:rate_down="67"
+        layout:rate_up="12" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/up_mea_Horizontal_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/up_mea_Horizontal_1"
+        layout:orientation="false"
+        layout:rate_down="67"
+        layout:rate_up="55" />
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/left_mea_vertical_1"
+        android:layout_alignLeft="@id/up_mea_Horizontal_1"
+        android:layout_alignRight="@id/up_mea_Horizontal_1"
+        android:layout_alignTop="@id/left_mea_vertical_1"
+        layout="@layout/reusable_lefter"
+        android:background="@color/main_backgroud"
+        android:padding="@dimen/grid_half_gap" />
 
     <!-- MAIN CONTAINER -->
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/history_clear"
-        android:layout_below="@+id/reusable_header"
-        android:gravity="center" >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/left_mea_vertical_1"
+        android:layout_alignLeft="@id/up_mea_Horizontal_2"
+        android:layout_alignRight="@id/up_mea_Horizontal_2"
+        android:layout_alignTop="@id/left_mea_vertical_1"
+        android:background="@drawable/main_background"
+        android:gravity="center_horizontal"
+        android:padding="@dimen/grid_half_gap" >
 
         <LinearLayout
             android:id="@+id/history_list_headers"
@@ -77,7 +119,7 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/history_list_view"
+            android:id="@+id/history_list_view2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/history_list_headers"
@@ -87,24 +129,6 @@
 
     <!-- CLEAR BTN -->
 
-    <TextView
-        android:id="@+id/history_clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/history_footer"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/selector_btn_validate"
-        android:drawableLeft="@drawable/icon_validate"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:paddingBottom="5dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="5dp"
-        android:text="@string/history_clear_btn"
-        android:textColor="@color/validate_btn_text"
-        android:textSize="18sp" />
 
     <!-- FOOTER -->
 
