--- a/Innovzen/res/layout/page_helpnew.xml
+++ b/Innovzen/res/layout/page_helpnew.xml
@@ -2,12 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background" >
+    android:background="@drawable/background" >
 
+    <!-- HEADER -->
+
+    <include layout="@layout/reusable_header" />
 
     <!-- SUBHEADER -->
 
-
+    <include layout="@layout/reusable_subheader" />
 
     <!-- MAIN CONTAINER -->
 
@@ -23,13 +26,12 @@
         <TextView
             android:id="@+id/page_help_main_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="@dimen/page_help_main_text" />
     </ScrollView>
 
     <!-- FOOTER -->
-
 
 
 </RelativeLayout>
