--- a/Innovzen/res/layout-land/animation_core.xml
+++ b/Innovzen/res/layout-land/animation_core.xml
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:id="@+id/animation_animation_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@android:color/white" >
         </RelativeLayout>
 
