--- a/Innovzen/res/layout-land/animation_core.xml
+++ b/Innovzen/res/layout-land/animation_core.xml
@@ -2,7 +2,9 @@
 <!-- 动画播放核心区域 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+     android:padding="@dimen/grid_half_gap"
+     >
     
     <!-- ANIMATION PARENT CONTAINER -->
 
