--- a/Innovzen/res/layout/page_helpnew.xml
+++ b/Innovzen/res/layout/page_helpnew.xml
@@ -2,15 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background" >
+    android:background="@drawable/main_background" >
 
-    <!-- HEADER -->
-
-    <include layout="@layout/reusable_header" />
 
     <!-- SUBHEADER -->
 
-    <include layout="@layout/reusable_subheader" />
+
 
     <!-- MAIN CONTAINER -->
 
@@ -26,12 +23,13 @@
         <TextView
             android:id="@+id/page_help_main_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:textSize="@dimen/page_help_main_text" />
     </ScrollView>
 
     <!-- FOOTER -->
+
 
 
 </RelativeLayout>
