--- a/Innovzen/res/layout-land/reusable_lefter.xml
+++ b/Innovzen/res/layout-land/reusable_lefter.xml
@@ -90,17 +90,14 @@
         android:layout_alignTop="@id/left_mea_vertical_2"
         android:background="@drawable/btn_volum_open"
         android:orientation="vertical"
-        android:visibility="invisible" 
-        android:weightSum="6"
-
-        >
+        android:visibility="invisible"
+        android:weightSum="6" >
 
         <ImageView
-          android:layout_weight="1"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/icon_volum" />
 
         <!--
@@ -121,21 +118,22 @@
         -->
 
         <com.innovzen.fragments.VerticalSeekBar
-            android:layout_weight="4"
-          android:id="@+id/mySeekBar"
+            android:id="@+id/mySeekBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="18dp"
-            android:paddingRight="18dp"
-            android:layout_gravity="center"      
+            android:layout_gravity="center"
+            android:layout_weight="4"
+            android:paddingLeft="2dp"
+            
+           
             android:thumb="@drawable/volume_cursor" />
 
         <ImageView
-            android:layout_weight="1"
             android:id="@+id/volum_less"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/icon_volum_less" />
     </LinearLayout>
 
